# prometheus2-litsumm-eval

./: evaluate_summaries.py  pyproject.toml
