[tool.poetry]
name = "prometheus2-litsumm-eval"
version = "0.1.0"
description = ""
authors = ["Andrew Green <agreen@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dataset = "^1.6.2"
polars = "^0.20.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
